Solucion errores ACTAS
